--- a/index.html
+++ b/index.html
@@ -145,6 +145,16 @@
 	<link rel="stylesheet" href="./project-info/index.css">
 	<script defer src="./project-info/index.js"></script>
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0GHF67PE8J"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-0GHF67PE8J');
+	</script>
+
 </body>
 
 </html>
