--- a/index.html
+++ b/index.html
@@ -147,13 +147,7 @@
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0GHF67PE8J"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
-
-		gtag('config', 'G-0GHF67PE8J');
-	</script>
+	<script defer src="./misc/analytics.js"></script>
 
 </body>
 
