--- a/index.html
+++ b/index.html
@@ -140,12 +140,13 @@
 
 	</main>
 
-	<!-- Project Info -->
+	<!-- Project info -->
 
 	<link rel="stylesheet" href="./project-info/index.css">
 	<script defer src="./project-info/index.js"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
+
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0GHF67PE8J"></script>
 	<script defer src="./misc/analytics.js"></script>
 
