--- a/index.html
+++ b/index.html
@@ -4,28 +4,18 @@
 <head>
 	<meta charset="utf-8">
 
+	<meta name="robots" content="noindex">
+
 	<title>Accordion</title>
+
+	<!-- Meta tags -->
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#2b69b5">
 
-	<!-- Meta tags -->
-
-	<meta name="author" content="Danial Zahid">
-
 	<meta name="title" property="og:title" content="Accordion">
 	<meta name="description" property="og:description" content="Simple and responsive accordion which can be used for different kinds of content (text, images, videos, and many more).">
-	<meta name="image" property="og:image" content="https://accordion.iamdanial.com/assets/img/banner.jpg">
-	<meta property="og:url" content="https://accordion.iamdanial.com/">
-	<meta property="og:site_name" content="Accordion">
-	<meta property="og:type" content="website">
-
-	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content="@IAmDanialZahid">
-	<meta name="twitter:creator" content="@IAmDanialZahid">
-	<meta name="twitter:title" content="Accordion">
-	<meta name="twitter:description" content="Simple and responsive accordion which can be used for different kinds of content (text, images, videos, and many more).">
-	<meta name="twitter:image" content="https://accordion.iamdanial.com/assets/img/banner.jpg">
+	<meta name="author" content="Danial Zahid">
 
 	<!-- Assets -->
 
@@ -144,11 +134,6 @@
 
 	<link rel="stylesheet" href="./project-info/index.css">
 	<script defer src="./project-info/index.js"></script>
-
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0GHF67PE8J"></script>
-	<script defer src="./misc/analytics.js"></script>
 
 </body>
 
